--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
       </header>
       <!-- introduction -->
       <div class="intro">
-        <h4>Hey there!🙋‍♂️ I am</h4>
+        <h4>Hey there!👋 I am</h4>
         <h1 id="shadedImage">Abhijeet Ranjan</h1>
         <h1 id="shadedImage"><span class="eth">Ethereum</span> ⧫ Developer</h1>
         <h1 id="shadedImage">and <span class="sol">Solidity</span> Engineer</h1>
